--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Braintree payment</title>
+  <title>Braintree payment</title> ss
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="/css/app.css" th:href="@{/css/app.css}" />
     <link rel="icon" type="image/png" href="/images/favicon.png" th:href="@{/images/favicon.png}"/>
